--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "start": "node backend/server.js",
     "test": "echo \"No tests specified\""
   },
+  "engines": {
+    "node": "20.12.2",
+    "npm": "10.8.1"
+  },
   "dependencies": {
     "accepts": "^1.3.8",
     "ansi-regex": "^5.0.1",
