--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"No tests specified\""
   },
   "engines": {
-    "node": "20.9.0",
+    "node": ">=14.0.0",
     "npm": "10.2.4"
   },
   "dependencies": {
